# VerdigrisE

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  SECURITY.md  config.py  corpus.py  models.py  pipeline.py  pylock.toml  pyproject.toml  pytest.ini  requirements.txt
.agents/skills/maintain-golden-contract/: SKILL.md
.agents/skills/run-paid-evaluation/: SKILL.md
.agents/skills/ship/: SKILL.md
.agents/skills/upgrade-dependencies/: SKILL.md
.github/: CODEOWNERS
.github/scripts/: build_dependency_snapshot.py
.github/workflows/: ci.yml  dependency-submission.yml  pr-safeguards.yml
eval/: __init__.py  conftest.py  ragaliq_adapter.py  test_dependency_submission.py  test_verdigrise.py
