[project]
name = "verdigrise"
version = "0.1.0"
description = "An inspectable RAG mechanics sandbox"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.5.1,<3",
    "openai>=2.45.0,<3",
    "pydantic>=2.13.4,<3",
]

[project.urls]
Repository = "https://github.com/dariero/VerdigrisE"
Issues = "https://github.com/dariero/VerdigrisE/issues"

[dependency-groups]
test = [
    "pytest>=9.1.1,<10",
    "ragaliq==0.2.0",
]

[tool.uv]
package = false
