[project]
name = "verdigrise"
version = "0.1.0"
description = "An inspectable RAG mechanics sandbox"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.5.1,<3",
    "openai>=2.45.0,<3",
    "pydantic>=2.13.4,<3",
]

[project.urls]
Repository = "https://github.com/dariero/VerdigrisE"
Issues = "https://github.com/dariero/VerdigrisE/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0,<5",
    "ruff>=0.15.21,<0.16",
]
test = [
    "pytest>=9.1.1,<10",
    "ragaliq==0.2.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
