[project]
name = "verdigrise"
version = "0.1.0"
description = "An inspectable RAG mechanics sandbox"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy>=2.5.1,<3",
    "openai>=2.45.0,<3",
    "pydantic>=2.13.4,<3",
]

[project.urls]
Repository = "https://github.com/dariero/VerdigrisE"
Issues = "https://github.com/dariero/VerdigrisE/issues"

[dependency-groups]
dev = [
    "mypy>=2.2.0,<2.3",
    "pre-commit>=4.6.0,<5",
    "pre-commit-hooks==6.0.0",
    "ruff>=0.15.21,<0.16",
]
test = [
    "pytest>=9.1.1,<10",
    "pytest-cov>=7.1.0,<8",
    "ragaliq==0.2.0",
]

[tool.uv]
package = false

[tool.pytest]
minversion = "9.1"
testpaths = ["eval"]
addopts = ["-m", "not openai and not rag_test"]
strict_config = true
strict_markers = true
markers = [
    "openai: makes paid OpenAI pipeline calls and must be selected explicitly",
    "rag_test: makes paid Claude judge calls through RagaliQ's native pytest boundary",
]

[tool.coverage.run]
branch = true
source = [
    "config",
    "corpus",
    "models",
    "pipeline",
    "eval.ragaliq_adapter",
]

[tool.coverage.report]
fail_under = 81
precision = 2
show_missing = true

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
strict = true
files = [
    "config.py",
    "corpus.py",
    "models.py",
    "pipeline.py",
    "eval/ragaliq_adapter.py",
]
